# mina-py

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: main.py
app/api/conversations/: __init__.py  create.py  delete.py  get_by_id.py  get_by_user.py  helpers.py  participants.py  router.py
app/api/groups/: __init__.py  leave.py  update.py  update_member.py
app/api/media/: attachments.py  chunked.py  upload.py
app/api/messages/: __init__.py  delete.py  edit.py  get.py  mark_read.py  pin_add.py  pin_remove.py  reactions_add.py  reactions_get.py  reactions_remove.py  router.py  search.py  send.py
app/api/users/: __init__.py  activation.py  avatar.py  enhance.py  login.py  presence.py  register.py  resend.py  update_status.py
app/api/websockets/: __init__.py  endpoint.py  messages.py  router.py
app/core/: config.py  database.py  dependencies.py  email.py  exception.py  logger.py  rabbitmq.py  redis.py  security.py  storage.py  websocket.py
app/models/: __init__.py  attachments.py  base.py  conversation_participants.py  conversations.py  messages.py  pinned_messages.py  users.py
app/schemas/: attachments.py  base.py  conversations.py  groups.py  messages.py  participants.py  users.py
app/tests/: conftest.py
app/tests/api/: conftest.py
app/tests/api/conversations/: test_delete.py  test_participants.py
app/tests/api/groups/: conftest.py  test_leave.py  test_update.py
app/tests/api/media/: conftest.py  test_attachments.py  test_chunked.py
app/tests/api/messages/: test_delete.py  test_get.py  test_pin.py  test_reactions.py  test_search.py  test_send.py
app/tests/api/users/: test_activation.py  test_avatar.py  test_enhance.py  test_login.py  test_presence.py  test_refresh.py  test_register.py  test_resend.py  test_update_status.py
app/tests/api/websockets/: test_endpoint.py
app/tests/core/: test_database.py  test_dependencies.py  test_lifespan.py
app/tests/core/rabbitmq/: test_connection.py  test_declare_queue.py  test_publish.py  test_queue_management.py
app/tests/core/redis/: test_cache.py  test_connection.py  test_hash.py  test_json.py  test_pubsub.py  test_set.py
app/tests/core/storage/: test_delete_avatar.py  test_init.py  test_media_storage.py  test_public_url.py  test_upload_avatar.py  test_validate_image.py
app/tests/core/websocket/: conftest.py  test_heartbeat.py  (+2 more)
app/utils/: get_active_message.py
backend/: .pre-commit-config.yaml  pytest.ini  ruff.toml
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  email.py  lifespan.py  redis.py  security.py  websocket.py
backend/app/models/: __init__.py  base.py  conversation_participants.py  conversations.py  messages.py  reactions.py  users.py
backend/app/schemas/: presence.py  reactions.py  users.py
backend/migrations/versions/: b6e1437c4409_create_users_table.py  e61957fe1201_add_attachments.py
migrations/: env.py
migrations/versions/: 81ee78e878a1_create_conversations_participants_and_.py  a1b2c3d4e5f6_add_group_chat_management.py  b6e1437c4409_create_users_table.py  f3a8c2d91e04_add_message_reactions.py
(+62 files in other folders)
